@@ -1,6 +1,7 @@
 2006-12-19  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/mio_ssl.c: reverted default to SSL_CTX_use_certificate_file()
+    * jabberd/lib/messages.c: do not abort jabberd14 on locale failure
 
 2006-12-18  Matthias Wimmer  <m@tthias.eu>
 
